--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 3000:80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   node-app:
     build: .
-    ports: 
-      - "3000:3000"
+    image: thiernos/node-app-1
     environment:
       - PORT=3000
-    # env_file:
-    #   - ./.env
+    depends_on:
+      - mongo
+ 
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=thiernos
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+    volumes:
+      - mongo-db:/data/db
+
+  redis:
+    image: redis
+
+volumes:
+  mongo-db: 
