--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   },
   "homepage": "https://github.com/Thierno04/Docker#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.5.2",
+    "redis": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
